# statistics

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: BinomialDistribution.h  LinearRegression.h  Spearman.h  Tables.h  Ttests.h  WilcoxonRankedTest.h  Ztests.h  confidenceInterval.h
src/: BinomialDistribution.cpp  LinearRegression.cpp  Spearman.cpp  Ttests.cpp  WilcoxonRankedTest.cpp  Ztests.cpp  confidenceInterval.cpp
tests/: CMakeLists.txt  Ttest.cpp  Ztest.cpp  fileReader.h
